feat: df con valor maximo de count_in por día

--- a/obtencion_tratamiento_datos.ipynb
+++ b/obtencion_tratamiento_datos.ipynb
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,8 @@
      "output_type": "stream",
      "text": [
       "Procesando datos desde 08-11-2024 23:01 hasta 08-12-2024 23:01\n",
-      "Procesando datos desde 08-12-2024 23:01 hasta 11-12-2024 00:01\n"
+      "Procesando datos desde 08-12-2024 23:01 hasta 11-12-2024 00:01\n",
+      "Datos guardados en data/datos_series_20250325_101658.csv\n"
      ]
     },
     {
@@ -825,13 +826,6 @@
      "text": [
       "C:\\Users\\hugol\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\urllib3\\connectionpool.py:1099: InsecureRequestWarning: Unverified HTTPS request is being made to host 'platon.grc.upv.es'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
       "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Datos guardados en data/datos_series_20250325_095030.csv\n"
      ]
     }
    ],
