--- a/obtencion_tratamiento_datos.ipynb
+++ b/obtencion_tratamiento_datos.ipynb
@@ -1983,6 +1983,540 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "timestamp",
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
+        },
+        {
+         "name": "count_in",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "count_out",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "fecha",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "31c1aa69-8ba3-4cba-8262-24818115abab",
+       "rows": [
+        [
+         "11060",
+         "2024-09-10 21:20:00",
+         "98.0",
+         "113.0",
+         "2024-09-10"
+        ],
+        [
+         "12870",
+         "2024-09-11 21:55:00",
+         "114.0",
+         "135.0",
+         "2024-09-11"
+        ],
+        [
+         "14261",
+         "2024-09-12 20:15:00",
+         "133.0",
+         "138.0",
+         "2024-09-12"
+        ],
+        [
+         "15819",
+         "2024-09-13 20:11:00",
+         "167.0",
+         "148.0",
+         "2024-09-13"
+        ],
+        [
+         "17349",
+         "2024-09-14 20:25:00",
+         "199.0",
+         "212.0",
+         "2024-09-14"
+        ],
+        [
+         "18899",
+         "2024-09-15 20:15:00",
+         "127.0",
+         "158.0",
+         "2024-09-15"
+        ],
+        [
+         "20453",
+         "2024-09-16 20:36:00",
+         "109.0",
+         "140.0",
+         "2024-09-16"
+        ],
+        [
+         "21785",
+         "2024-09-17 22:11:00",
+         "151.0",
+         "183.0",
+         "2024-09-17"
+        ],
+        [
+         "23076",
+         "2024-09-18 20:56:00",
+         "159.0",
+         "188.0",
+         "2024-09-18"
+        ],
+        [
+         "24412",
+         "2024-09-19 20:36:00",
+         "153.0",
+         "163.0",
+         "2024-09-19"
+        ],
+        [
+         "25745",
+         "2024-09-20 20:16:00",
+         "154.0",
+         "182.0",
+         "2024-09-20"
+        ],
+        [
+         "27065",
+         "2024-09-21 20:16:00",
+         "108.0",
+         "118.0",
+         "2024-09-21"
+        ],
+        [
+         "28421",
+         "2024-09-22 21:06:00",
+         "173.0",
+         "159.0",
+         "2024-09-22"
+        ],
+        [
+         "29758",
+         "2024-09-23 20:16:00",
+         "142.0",
+         "136.0",
+         "2024-09-23"
+        ],
+        [
+         "31142",
+         "2024-09-24 20:31:00",
+         "145.0",
+         "133.0",
+         "2024-09-24"
+        ],
+        [
+         "32538",
+         "2024-09-25 21:46:00",
+         "148.0",
+         "162.0",
+         "2024-09-25"
+        ],
+        [
+         "33691",
+         "2024-09-26 20:41:00",
+         "101.0",
+         "110.0",
+         "2024-09-26"
+        ],
+        [
+         "34794",
+         "2024-09-27 19:56:00",
+         "132.0",
+         "134.0",
+         "2024-09-27"
+        ],
+        [
+         "35947",
+         "2024-09-28 19:46:00",
+         "149.0",
+         "143.0",
+         "2024-09-28"
+        ],
+        [
+         "37083",
+         "2024-09-29 20:41:00",
+         "199.0",
+         "251.0",
+         "2024-09-29"
+        ],
+        [
+         "38242",
+         "2024-09-30 19:36:00",
+         "91.0",
+         "96.0",
+         "2024-09-30"
+        ],
+        [
+         "286",
+         "2024-10-01 20:01:00",
+         "104.0",
+         "91.0",
+         "2024-10-01"
+        ],
+        [
+         "1516",
+         "2024-10-02 20:31:00",
+         "94.0",
+         "110.0",
+         "2024-10-02"
+        ],
+        [
+         "2695",
+         "2024-10-03 19:26:00",
+         "101.0",
+         "93.0",
+         "2024-10-03"
+        ],
+        [
+         "3939",
+         "2024-10-04 19:56:00",
+         "106.0",
+         "105.0",
+         "2024-10-04"
+        ],
+        [
+         "5106",
+         "2024-10-05 20:56:00",
+         "168.0",
+         "173.0",
+         "2024-10-05"
+        ],
+        [
+         "6260",
+         "2024-10-06 19:46:00",
+         "129.0",
+         "151.0",
+         "2024-10-06"
+        ],
+        [
+         "7490",
+         "2024-10-07 19:56:00",
+         "124.0",
+         "124.0",
+         "2024-10-07"
+        ],
+        [
+         "8687",
+         "2024-10-08 19:31:00",
+         "124.0",
+         "144.0",
+         "2024-10-08"
+        ],
+        [
+         "9965",
+         "2024-10-09 20:01:00",
+         "210.0",
+         "225.0",
+         "2024-10-09"
+        ],
+        [
+         "11414",
+         "2024-10-10 19:31:00",
+         "124.0",
+         "106.0",
+         "2024-10-10"
+        ],
+        [
+         "13260",
+         "2024-10-11 20:26:00",
+         "122.0",
+         "157.0",
+         "2024-10-11"
+        ],
+        [
+         "14764",
+         "2024-10-12 20:06:00",
+         "211.0",
+         "212.0",
+         "2024-10-12"
+        ],
+        [
+         "16299",
+         "2024-10-13 19:31:00",
+         "217.0",
+         "213.0",
+         "2024-10-13"
+        ],
+        [
+         "17870",
+         "2024-10-14 19:46:00",
+         "116.0",
+         "131.0",
+         "2024-10-14"
+        ],
+        [
+         "19398",
+         "2024-10-15 20:27:00",
+         "121.0",
+         "141.0",
+         "2024-10-15"
+        ],
+        [
+         "20986",
+         "2024-10-16 21:46:00",
+         "126.0",
+         "136.0",
+         "2024-10-16"
+        ],
+        [
+         "22222",
+         "2024-10-17 20:36:00",
+         "136.0",
+         "176.0",
+         "2024-10-17"
+        ],
+        [
+         "23579",
+         "2024-10-18 20:16:00",
+         "138.0",
+         "151.0",
+         "2024-10-18"
+        ],
+        [
+         "24907",
+         "2024-10-19 21:11:00",
+         "186.0",
+         "208.0",
+         "2024-10-19"
+        ],
+        [
+         "26264",
+         "2024-10-20 21:16:00",
+         "191.0",
+         "186.0",
+         "2024-10-20"
+        ],
+        [
+         "27526",
+         "2024-10-21 19:46:00",
+         "122.0",
+         "119.0",
+         "2024-10-21"
+        ],
+        [
+         "28861",
+         "2024-10-22 19:31:00",
+         "160.0",
+         "189.0",
+         "2024-10-22"
+        ],
+        [
+         "30269",
+         "2024-10-23 20:06:00",
+         "115.0",
+         "128.0",
+         "2024-10-23"
+        ],
+        [
+         "31590",
+         "2024-10-24 19:21:00",
+         "135.0",
+         "144.0",
+         "2024-10-24"
+        ],
+        [
+         "33009",
+         "2024-10-25 19:16:00",
+         "148.0",
+         "183.0",
+         "2024-10-25"
+        ],
+        [
+         "34122",
+         "2024-10-26 19:01:00",
+         "248.0",
+         "244.0",
+         "2024-10-26"
+        ],
+        [
+         "35322",
+         "2024-10-27 21:06:00",
+         "97.0",
+         "96.0",
+         "2024-10-27"
+        ],
+        [
+         "36395",
+         "2024-10-28 18:21:00",
+         "160.0",
+         "180.0",
+         "2024-10-28"
+        ],
+        [
+         "37518",
+         "2024-10-29 18:11:00",
+         "112.0",
+         "125.0",
+         "2024-10-29"
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 92
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>count_in</th>\n",
+       "      <th>count_out</th>\n",
+       "      <th>fecha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11060</th>\n",
+       "      <td>2024-09-10 21:20:00</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>2024-09-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12870</th>\n",
+       "      <td>2024-09-11 21:55:00</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>2024-09-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14261</th>\n",
+       "      <td>2024-09-12 20:15:00</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>2024-09-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15819</th>\n",
+       "      <td>2024-09-13 20:11:00</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>2024-09-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17349</th>\n",
+       "      <td>2024-09-14 20:25:00</td>\n",
+       "      <td>199.0</td>\n",
+       "      <td>212.0</td>\n",
+       "      <td>2024-09-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7106</th>\n",
+       "      <td>2024-12-06 17:57:00</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>2024-12-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8339</th>\n",
+       "      <td>2024-12-07 18:42:00</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>2024-12-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9539</th>\n",
+       "      <td>2024-12-08 18:32:00</td>\n",
+       "      <td>163.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>2024-12-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10819</th>\n",
+       "      <td>2024-12-09 18:07:00</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>2024-12-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12320</th>\n",
+       "      <td>2024-12-10 20:07:00</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>2024-12-10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>92 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                timestamp  count_in  count_out       fecha\n",
+       "11060 2024-09-10 21:20:00      98.0      113.0  2024-09-10\n",
+       "12870 2024-09-11 21:55:00     114.0      135.0  2024-09-11\n",
+       "14261 2024-09-12 20:15:00     133.0      138.0  2024-09-12\n",
+       "15819 2024-09-13 20:11:00     167.0      148.0  2024-09-13\n",
+       "17349 2024-09-14 20:25:00     199.0      212.0  2024-09-14\n",
+       "...                   ...       ...        ...         ...\n",
+       "7106  2024-12-06 17:57:00     151.0      140.0  2024-12-06\n",
+       "8339  2024-12-07 18:42:00     128.0      145.0  2024-12-07\n",
+       "9539  2024-12-08 18:32:00     163.0      190.0  2024-12-08\n",
+       "10819 2024-12-09 18:07:00      50.0       53.0  2024-12-09\n",
+       "12320 2024-12-10 20:07:00      65.0       65.0  2024-12-10\n",
+       "\n",
+       "[92 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ocupacion = pd.read_csv(\"data/datos_ocupacion.csv\")\n",
+    "ocupacion['timestamp'] = pd.to_datetime(ocupacion['timestamp'], dayfirst=True)\n",
+    "ocupacion['fecha'] = ocupacion['timestamp'].dt.date\n",
+    "df_ocupacion_dia = ocupacion.loc[ocupacion.groupby('fecha')['count_in'].idxmax()]\n",
+    "df_ocupacion_dia\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
