--- a/obtencion_tratamiento_datos.ipynb
+++ b/obtencion_tratamiento_datos.ipynb
@@ -2418,6 +2418,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Count in segmentar en lluvia y uno lluvia. Hacer test de hipotesis y ver si hay diferencias entre ellos.  Segmentar también entre semana y fin de semana."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TEMPERATURA PROMEDIO : 3 intervalos: fria ( < 15 ) moderada (15 - 27) y alta (>27) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -4533,6 +4547,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hacer solo con count_in y con día de la semana etc"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -4636,7 +4657,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- ver si es serie temporal\n",
+    "- ver que modelo utilizar\n",
+    "- como parametizar ese modelo ( cuanto datos historicos coges apra predecir )"
+   ]
   }
  ],
  "metadata": {
