--- a/obtencion_tratamiento_datos.ipynb
+++ b/obtencion_tratamiento_datos.ipynb
@@ -4666,11 +4666,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Variables dummys y categóricas y test de hipótesis"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5912,7 +5914,6 @@
     "bins = [-float('inf'), 15, 26, float('inf')]\n",
     "labels = ['fría', 'moderada', 'alta']\n",
     "\n",
-    "# Crear la nueva columna categórica\n",
     "df_dummy['categoria_temperatura'] = pd.cut(df_dummy['temp_promedio'], bins=bins, labels=labels)\n",
     "df_dummy"
    ]
