fix: labels to english

--- a/obtencion_tratamiento_datos.ipynb
+++ b/obtencion_tratamiento_datos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "f1c36c3e-7f03-496a-9c34-5d1f9a941412",
+       "ref": "f61c2be1-2648-447a-a0ff-0d464c241baf",
        "rows": [
         [
          "11060",
@@ -450,7 +450,7 @@
        "[92 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a0cbc96d-fa38-4719-af6b-6ac81d634413",
+       "ref": "0b7487ac-64f8-44af-b201-0e937091dc3d",
        "rows": [
         [
          "0",
@@ -1435,7 +1435,7 @@
        "[93 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1552,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "e4434994-f2ce-426a-a228-488189b607b6",
+       "ref": "a73cdef5-5e75-4971-9d96-234480631a04",
        "rows": [
         [
          "0",
@@ -2495,7 +2495,7 @@
        "[92 rows x 11 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2513,7 +2513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2549,7 +2549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2638,7 +2638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2662,7 +2662,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "c64085ba-aa54-4112-a8d2-aa5568da3fcd",
+       "ref": "9cc5caff-1c5a-40f3-bbd5-91c50a873ce6",
        "rows": [
         [
          "0",
@@ -3021,7 +3021,7 @@
        "[92 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3284,7 +3284,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "df360a0c-6e8f-4662-a60c-5545cdd30173",
+       "ref": "4a7146f8-c27e-460a-bb79-b8aabd1b3355",
        "rows": [
         [
          "0",
@@ -4826,7 +4826,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a01626fa-589b-4ae6-baf9-f40fa1403ab0",
+       "ref": "bbd4a406-1315-4ef7-80d7-8ab3c0cb6d1f",
        "rows": [
         [
          "0",
@@ -5663,7 +5663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -5687,7 +5687,7 @@
        "array([129.74333333])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5776,7 +5776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -5784,24 +5784,18 @@
      "output_type": "stream",
      "text": [
       "DEBUG:cmdstanpy:cmd: where.exe tbb.dll\n",
-      "cwd: None\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:cmdstanpy:TBB already found in load path\n",
+      "cwd: None\n",
+      "DEBUG:cmdstanpy:Adding TBB (C:\\Users\\hugol\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\prophet\\stan_model\\cmdstan-2.33.1\\stan\\lib\\stan_math\\lib\\tbb) to PATH\n",
       "INFO:prophet:Disabling yearly seasonality. Run prophet with yearly_seasonality=True to override this.\n",
       "INFO:prophet:Disabling daily seasonality. Run prophet with daily_seasonality=True to override this.\n",
-      "DEBUG:cmdstanpy:input tempfile: C:\\Users\\hugol\\AppData\\Local\\Temp\\tmpkvgq9yrr\\oinhmiri.json\n",
-      "DEBUG:cmdstanpy:input tempfile: C:\\Users\\hugol\\AppData\\Local\\Temp\\tmpkvgq9yrr\\8kmm2jy8.json\n",
+      "DEBUG:cmdstanpy:input tempfile: C:\\Users\\hugol\\AppData\\Local\\Temp\\tmpz5f_14aw\\_mfddunx.json\n",
+      "DEBUG:cmdstanpy:input tempfile: C:\\Users\\hugol\\AppData\\Local\\Temp\\tmpz5f_14aw\\czxi5ug3.json\n",
       "DEBUG:cmdstanpy:idx 0\n",
       "DEBUG:cmdstanpy:running CmdStan, num_threads: None\n",
-      "DEBUG:cmdstanpy:CmdStan args: ['C:\\\\Users\\\\hugol\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python311\\\\site-packages\\\\prophet\\\\stan_model\\\\prophet_model.bin', 'random', 'seed=83738', 'data', 'file=C:\\\\Users\\\\hugol\\\\AppData\\\\Local\\\\Temp\\\\tmpkvgq9yrr\\\\oinhmiri.json', 'init=C:\\\\Users\\\\hugol\\\\AppData\\\\Local\\\\Temp\\\\tmpkvgq9yrr\\\\8kmm2jy8.json', 'output', 'file=C:\\\\Users\\\\hugol\\\\AppData\\\\Local\\\\Temp\\\\tmpkvgq9yrr\\\\prophet_modelir95koia\\\\prophet_model-20250501185432.csv', 'method=optimize', 'algorithm=newton', 'iter=10000']\n",
-      "18:54:32 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "DEBUG:cmdstanpy:CmdStan args: ['C:\\\\Users\\\\hugol\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python311\\\\site-packages\\\\prophet\\\\stan_model\\\\prophet_model.bin', 'random', 'seed=38799', 'data', 'file=C:\\\\Users\\\\hugol\\\\AppData\\\\Local\\\\Temp\\\\tmpz5f_14aw\\\\_mfddunx.json', 'init=C:\\\\Users\\\\hugol\\\\AppData\\\\Local\\\\Temp\\\\tmpz5f_14aw\\\\czxi5ug3.json', 'output', 'file=C:\\\\Users\\\\hugol\\\\AppData\\\\Local\\\\Temp\\\\tmpz5f_14aw\\\\prophet_modelaw8mc3hu\\\\prophet_model-20250504084051.csv', 'method=optimize', 'algorithm=newton', 'iter=10000']\n",
+      "08:40:51 - cmdstanpy - INFO - Chain [1] start processing\n",
       "INFO:cmdstanpy:Chain [1] start processing\n",
-      "18:54:32 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "08:40:51 - cmdstanpy - INFO - Chain [1] done processing\n",
       "INFO:cmdstanpy:Chain [1] done processing\n"
      ]
     },
@@ -5989,7 +5983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6024,9 +6018,9 @@
     "plt.plot(df_comparacion.index, df_comparacion['RandomForest'], label='Random Forest', linestyle='-.', marker='s')\n",
     "plt.plot(df_comparacion.index, df_comparacion['Hibrido'], label='Prophet + LightGBM', linestyle=':', marker='^')\n",
     "\n",
-    "plt.title('Comparación: Real vs Random Forest vs Híbrido')\n",
-    "plt.xlabel('Fecha')\n",
-    "plt.ylabel('Visitantes (count_in)')\n",
+    "plt.title('Comparison: Real vs Random Forest vs Hybrid')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Visitors (count_in)')\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.xticks(rotation=45)\n",
